<resources>
    <string name="app_name">Turri Tour</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_english">English</string>
    <string name="action_spanish">Español</string>
    <string name="action_german">Deutsch</string>

    <string name="title_activity_parametros_busqueda">Turri Tour</string>

    <string name="start_point">Punto de Partida:</string>
    <string name="start_point_input">Tú ubicación</string>
    <string name="type_activity">Tipo de Actividad:</string>
    <string name="max_distance">Distancia Máxima:</string>
    <string name="max_duration">Duración Máxima:</string>
    <string name="average_cost">Costo Promedio:</string>

    <string name="routes_button">Recomendar Rutas</string>

    <string name="cost_item_1">Bajo</string>
    <string name="cost_item_2">Medio</string>
    <string name="cost_item_3">Alto</string>

    <string name="distance_item_1">5</string>
    <string name="distance_item_2">10</string>
    <string name="distance_item_3">15</string>
    <string name="distance_item_4">20</string>

    <string name="duration_item_1">10</string>
    <string name="duration_item_2">15</string>
    <string name="duration_item_3">25</string>

    <string name="start_point_item_1">Tú ubicación</string>

    <string name="parameters_screem">En la presente pantalla usted deberá ingresar una serie
                                       de parametros que permitirán al sistema recomendar rutas
                                       turísticas en base a las características elegidas por su
                                       persona.</string>


    <string name="route_select_screem"> A continuación, usted deberá seleccionar una de las rutas que
                                        puede ver en la parte de abajo para proceder a ver dicha ruta
                                        trasada en un mapa.</string>

    <string name="number">Número</string>

    <string name="description">Información de la ruta</string>

    <string name="label_table">Rutas recomendadas:</string>

    <string name="title_activity_maps">Mapa</string>

    <string name="btn_home">Principal</string>

    <string name="btn_recommended_routes">Recomendar Rutas</string>

    <string name="btn_generate_routes">Generar Rutas</string>

    <string name="btn_log_in">Iniciar Sesión</string>
    <string name="btn_log_out">Cerrar Sesión</string>
    <string name="btn_register">Crear una cuenta</string>
    <string name="btn_recover_password">¿Olvidó su contraseña?</string>
    <string name="btn_support">Soporte</string>

    <!-- String relacionados a la información de un nodo -->
    <string name="name_node">Hotel Green Mountain and Lodge</string>
    <string name="slogan_node">“Las Mejores Hamburguesas de Turrialba”</string>
    <string name="description_node">Cuenta con las mejores hamburguesas de la puta, ingredientes frescos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->

</resources>